# tmip-emat

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deployment.yml  docs.yml
binder/: environment.yml  postBuild
conda-envs/: EMAT-DEV.yml  EMAT.yml
conda-recipe/: EMAT-DEV.yml  EMAT.yml  build.sh  meta.yaml
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/_modules/: index.html
dev/_static/: documentation_options.js
dev/source/: emat.conda.html  emat.git.html  emat.glossary.html  emat.install.html  emat.intro.html  emat.method-index.html  emat.references.html  emat.vs.workbench.html
docs/: Makefile  conf.py  get_version.py  index.rst  make.bat  nb-list.txt  sphinx-jupyter-widgets-cleanup.py
docs/source/: emat.conda.rst  emat.git.rst  emat.glossary.rst  emat.install.rst  emat.intro.rst  emat.metamodels.rst  emat.references.rst  emat.vs.workbench.rst
emat/: __init__.py  _pkg_constants.py  configuration.py  exceptions.py  styles.py  versions.py
emat/analysis/: __init__.py  cart.py  contrast.py  discovery.py  explore.py  feature_scoring.py  prim.py  visual_distribution.py  widgets.py
emat/database/: __init__.py  database.py
emat/examples/: __init__.py
emat/experiment/: dist_utils.py  latin_hypercube.py  (+2 more)
notebooks/: multitarget-dev.ipynb  viz-dev.ipynb
public/: index.html
tests/: RoadTestSeqDesign.ipynb  batch-seq-design-test.ipynb  old-format-database.sqlitedb  require_version_999.sqldb  test_analysis.py  test_core_model.py  test_database.py  test_dynamo.py  test_experiment.py  test_filesmodel.py  test_learn.py  test_meta_model.py  test_road_test.py  test_road_test_integration.py  test_robust_evaluation_scenarios.csv  test_robust_results.csv  test_scope.py  test_utils.py
(+493 files in other folders)
