[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emat"
version = "0.6.1"  # Update this with the actual version from emat/__init__.py
description = "Add a short description here"
authors = [
    { name = "Jeff Newman", email = "jeff@driftless.xyz" }
]
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy>=1.23,<2",
    "pandas>=1.5,<2",
    "scipy>=1.9,<1.12",
    "scikit-learn>=1.1.2,<1.2",
    "appdirs>=1.4.3",
    "matplotlib>=3.0.1",
    "seaborn>=0.12",
    "pydot",
    "graphviz",
    "plotly>=4.14",
    "kaleido==0.2.1",
    "ipywidgets>=8.0.2",
    "joblib>=1.2",
    "dask[dataframe]>=1.0",
    "distributed>=1.25",
    "cloudpickle>=0.6.1",
    "ipykernel>=5.1",
    "jupyter_contrib_nbextensions>=0.4.0",
    "jupyter",
    "notebook",
    "pytest>=4.0.1",
    "pytest-regressions",
    "pyscaffold",
    "ipyparallel",
    "pyzmq",
    "platypus-opt<1.3",
    "altair",
    "salib",
    "sqlalchemy",
    "webcolors",
    "datashader",
    "boto3",
    "addicty",
    "yamllint",
    "sphinx",
    "pygments>=2.2.0",
    "docutils>=0.14",
    "sphinx_rtd_theme",
    "sphinxcontrib-restbuilder",
    "nbsphinx",
    "jupyter_sphinx",
    "packaging",
    "jupytext",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.0.1",
    "pytest-regressions",
]

[project.scripts]
emat-road-test-demo = "emat.model.core_python.core_python_examples:_Road_Capacity_Investment_CmdLine"

[tool.setuptools.package-data]
emat = [
    "model/tests/*.yaml",
    "scope/tests/*.yaml",
    "database/sqlite/*.sql",
    "examples/**/*.yaml",
    "examples/**/*.csv",
    "examples/**/*.xlsx",
    "examples/**/*.db.gz",
]